fix button alignment/clearning in ie7

--- a/app/assets/scss/components/_form.scss
+++ b/app/assets/scss/components/_form.scss
@@ -354,6 +354,10 @@
                 text-align: left;
                 padding: .8em 0;
             }
+            .ie7 & {
+                display: inline-block;
+                text-align: left;
+            }
         }
      }
 
